--- a/css/css.css
+++ b/css/css.css
@@ -24,7 +24,7 @@ button {
     font-family: Helvetica;
     font-size: 15px;
     border-radius: 5px;
-    border: 0px solid #888;
+    border: 0px solid rgb(136, 136, 136);
     text-align: center;
     margin-bottom: 10px;
 }
